--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!--Tutorial follow along and code src at: https://www.youtube.com/watch?v=asUh9UBxY1o-->
   </head>
   <body>
    
