--- a/index.html
+++ b/index.html
@@ -21,7 +21,33 @@
     <!--Tutorial follow along and code src at: https://www.youtube.com/watch?v=asUh9UBxY1o-->
   </head>
   <body>
-   
+
+   <!--NAVIGATION-->
+   <div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+       <div class="container">
+           <div class="navbar-header">
+               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+                   <span class="icon-bar"></span>
+               </button>
+               <a href="#" class="navbar-brand">Media</a>
+           </div>
+           <div class="navbar-collapse collapse">
+               <ul class="nav navbar-nav navbar-right">
+                   <li><a href="#header">Home</a></li>
+                   <li><a href="#services">services</a></li>
+                   <li><a href="#pricing">pricing</a></li>
+                   <li><a href="#team">team</a></li>
+                   <li><a href="#client">clients</a></li>
+                   <li><a href="#contact">contact</a></li>
+               </ul>
+           </div>
+       </div>
+   </div>
+
+
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
