--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
 
-   <!--NAVIGATION-->
+   <!--NAVIGATIONS-->
    <div id="myNavbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
        <div class="container">
            <div class="navbar-header">
