--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        <div class="container">
            <div class="row">
                <div class="col-lg-6 col-md-6">
-                   <h1>Resonsive Web Design</h1>
+                   <h1>Responsive Web Design</h1>
                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                    <button class="btn btn-lg btn-primary">Buy Now</button>
                    <button class="btn btn-lg btn-success">View Detail</button>
@@ -64,6 +64,43 @@
            </div>
        </div>
    </div>
+
+   <!--END HEADER-->
+
+   <!--SERVICES-->
+
+   <div id="services" class="services">
+       <div class="container">
+           <h2>Services</h2>
+           <p>Lorem Ipsum is simply dummy text of the printing and typesettin dummy text</p>
+           <div class="row">
+               <div class="col-lg-3 col-md-3">
+                   <i class="fa fa-desktop" aria-hidden="true"></i>
+                   <h4>Web design</h4>
+                   <p>Lorem Ipsum passages, and more recently with desktop publishing software</p>
+               </div>
+               <div class="col-lg-3 col-md-3">
+                <i class="fa fa-mobile" aria-hidden="true"></i>
+                <h4>Mobile Apps</h4>
+                <p>Lorem Ipsum passages, and more recently with desktop publishing software</p>
+            </div>
+            <div class="col-lg-3 col-md-3">
+                <i class="fa fa-database" aria-hidden="true"></i>
+                <h4>Database</h4>
+                <p>Lorem Ipsum passages, and more recently with desktop publishing software</p>
+            </div>
+            <div class="col-lg-3 col-md-3">
+                <i class="fa fa-university" aria-hidden="true"></i>
+                <h4>Consulting</h4>
+                <p>Lorem Ipsum passages, and more recently with desktop publishing software</p>
+            </div>
+           </div>
+       </div>
+   </div>
+
+   <!--END SERVICES-->
+
+   
 
 
 
