--- a/index.html
+++ b/index.html
@@ -100,7 +100,82 @@
 
    <!--END SERVICES-->
 
-   
+   <!--PRICING-->
+
+   <div id="pricing" class="pricing">
+       <div class="container">
+           <div class="row">
+               <h2>Pricing</h2>
+               <p>orem Ipsum passages, and more recently with desktop publishing software</p>
+               <div class="col-lg-3 col-md-3">
+                   <div class="packages">
+                       <h4>Bronze</h4>
+                       <h1>9.99</h1>
+                       <b>Monthly</b>
+                       <p>Lorem Ipsum passages, and more recently with desktop</p>
+                       <hr>
+                       <li>100 Users</li>
+                       <li>SSL Certificate</li>
+                       <li>Online Support</li>
+                       <li>300GB Diskspace</li>
+                       <li>100 Email Addresses</li>
+                       <li>MySql Database</li>
+                       <button class="btn btn-success">Get Started</button>
+                   </div>
+               </div>
+               <div class="col-lg-3 col-md-3">
+                <div class="packages">
+                    <h4>Silver</h4>
+                    <h1>19.99</h1>
+                    <b>Monthly</b>
+                    <p>Lorem Ipsum passages, and more recently with desktop</p>
+                    <hr>
+                    <li>100 Users</li>
+                    <li>SSL Certificate</li>
+                    <li>Online Support</li>
+                    <li>300GB Diskspace</li>
+                    <li>100 Email Addresses</li>
+                    <li>MySql Database</li>
+                    <button class="btn btn-success">Get Started</button>
+                </div>
+            </div>
+           <div class="col-lg-3 col-md-3">
+            <div class="packages">
+                <h4>Gold</h4>
+                <h1>29.99</h1>
+                <b>Monthly</b>
+                <p>Lorem Ipsum passages, and more recently with desktop</p>
+                <hr>
+                <li>100 Users</li>
+                <li>SSL Certificate</li>
+                <li>Online Support</li>
+                <li>300GB Diskspace</li>
+                <li>100 Email Addresses</li>
+                <li>MySql Database</li>
+                <button class="btn btn-success">Get Started</button>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3">
+            <div class="packages">
+                <h4>Premium</h4>
+                <h1>39.99</h1>
+                <b>Monthly</b>
+                <p>Lorem Ipsum passages, and more recently with desktop</p>
+                <hr>
+                <li>100 Users</li>
+                <li>SSL Certificate</li>
+                <li>Online Support</li>
+                <li>300GB Diskspace</li>
+                <li>100 Email Addresses</li>
+                <li>MySql Database</li>
+                <button class="btn btn-success">Get Started</button>
+            </div>
+        </div>
+       </div>
+   </div>
+
+   <!--END PRICING-->
+
 
 
 
