--- a/index.html
+++ b/index.html
@@ -173,8 +173,62 @@
         </div>
        </div>
    </div>
+   </div>
 
    <!--END PRICING-->
+
+   <!--TEAM-->
+
+   <div id="team" class="team">
+       <div class="container">
+           <div class="row">
+               <h2>Meet our team</h2>
+               <p>Lorem Ipsum passages, and more recently with desktop publishing software</p>
+               <div class="col-lg-3 col-md-3">
+                   <img src="images/team/team-1.jpg" class="img-circle" alt="">
+                   <h4>John Doe</h4>
+                   <b>CEO and Founder</b>
+                   <P>Lorem Ipsum passages, and more recently with desktop publishing software</P>
+                   <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                   <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                   <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                   <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+               </div>
+               <div class="col-lg-3 col-md-3">
+                    <img src="images/team/team-2.jpg" class="img-circle" alt="">
+                    <h4>John Doe</h4>
+                    <b>CEO and Founder</b>
+                    <P>Lorem Ipsum passages, and more recently with desktop publishing software</P>
+                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                        <img src="images/team/team-3.jpg" class="img-circle" alt="">
+                        <h4>John Doe</h4>
+                        <b>CEO and Founder</b>
+                        <P>Lorem Ipsum passages, and more recently with desktop publishing software</P>
+                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                        <img src="images/team/team-4.jpg" class="img-circle" alt="">
+                        <h4>John Doe</h4>
+                        <b>CEO and Founder</b>
+                        <P>Lorem Ipsum passages, and more recently with desktop publishing software</P>
+                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                </div>
+           </div>
+       </div>
+   </div>
+
+   <!--END TEAM-->
 
 
 
