--- a/index.html
+++ b/index.html
@@ -230,6 +230,28 @@
 
    <!--END TEAM-->
 
+   <!--Clients-->
+
+   <div id="clients" class="clients">
+       <div class="container">
+           <div class="row">
+               <h2>Trusted by</h2>
+               <p>Lorem Ipsum passages, and more recently with desktop publishing software</p>
+               <div class="col-lg-3 col-md-3">
+                <li><img src="images/clients/client1.png" alt=""></li>
+           </div>
+           <div class="col-lg-3 col-md-3">
+                <li><img src="images/clients/client2.png" alt=""></li>
+           </div>
+           <div class="col-lg-3 col-md-3">
+                <li><img src="images/clients/client3.png" alt=""></li>
+           </div>
+           <div class="col-lg-3 col-md-3">
+                <li><img src="images/clients/client4.png" alt=""></li>
+           </div>
+       </div>
+   </div>
+
 
 
 
